--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "proyecto-rest-lucho",
+  "name": "proyecto-rest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -14,6 +14,8 @@
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.3",
+    "pg": "^8.7.3",
+    "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "sequelize": "^6.21.0",
     "winston": "^3.7.2"
